--- a/QuarkGluon.ipynb
+++ b/QuarkGluon.ipynb
@@ -2,56 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "collapsed": true,
-    "id": "-LsgjtRuI6_G",
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "outputId": "fc2a88a5-ffc2-4b52-88ca-2fdb947288f1"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n",
-      "Cloning into '/content/QG_IJEPA'...\n",
-      "remote: Enumerating objects: 248, done.\u001b[K\n",
-      "remote: Counting objects: 100% (16/16), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
-      "remote: Total 248 (delta 5), reused 9 (delta 4), pack-reused 232 (from 1)\u001b[K\n",
-      "Receiving objects: 100% (248/248), 49.77 KiB | 7.11 MiB/s, done.\n",
-      "Resolving deltas: 100% (150/150), done.\n",
-      "/content/QG_IJEPA\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "import os\n",
-    "\n",
-    "# 1. Mount and Clone\n",
-    "drive.mount('/content/drive')\n",
-    "!git clone https://github.com/Usaid-Siddiqui/QG_Ijepa.git /content/QG_IJEPA\n",
-    "%cd /content/QG_IJEPA\n",
-    "\n",
-    "# 2. Setup Data (Copy subset to local SSD)\n",
-    "!cp /content/drive/MyDrive/QG_IJEPA/data/qg_medium_train.h5 /content/qg_compressed.h5\n",
-    "!cp /content/drive/MyDrive/QG_IJEPA/data/qg_medium_finetune.h5 /content/qg_compressed_finetune.h5\n",
-    "!cp /content/drive/MyDrive/QG_IJEPA/data/qg_medium_test.h5 /content/qg_compressed_test.h5\n",
-    "\n",
-    "\n",
-    "# 3. Pathing\n",
-    "os.environ['PYTHONPATH'] += \":/content/QG_IJEPA\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "colab": {
@@ -89,7 +39,6 @@
     }
    ],
    "source": [
-    "!git restore /content/QG_IJEPA/colab_config.yaml\n",
     "!git pull"
    ]
   },
@@ -132,9 +81,9 @@
     "# We need to decompress the data and store the in chunks optimal for the dataloader to read\n",
     "\n",
     "from utils import unpack_h5\n",
-    "unpack_h5(\"/content/qg_compressed.h5\", \"/content/qg_fast.h5\")\n",
-    "unpack_h5(\"/content/qg_compressed_test.h5\", \"/content/qg_fast_test.h5\")\n",
-    "unpack_h5(\"/content/qg_compressed_finetune.h5\", \"/content/qg_fast_finetune.h5\")"
+    "unpack_h5(\"../data_compressed/qg_medium_train.h5\", \"../data_uncompressed/qg_medium_train.h5\")\n",
+    "unpack_h5(\"../data_compressed/qg_medium_test.h5\", \"/content/qq_medium_test.h5\")\n",
+    "unpack_h5(\"../data_compressed/qg_medium_finetune.h5\", \"/content/qg_medium_finetune.h5\")"
    ]
   },
   {
@@ -158,11 +107,11 @@
    ],
    "source": [
     "# config_colab.yaml\n",
-    "%%writefile colab_config.yaml\n",
+    "%%writefile config.yaml\n",
     "data:\n",
     "  h5_path: \"/content/qg_fast.h5\"\n",
     "  batch_size: 256\n",
-    "  num_workers: 2\n",
+    "  num_workers: 4\n",
     "\n",
     "model:\n",
     "  name: \"vit_small_ijepa\"\n",
@@ -305,71 +254,7 @@
     }
    ],
    "source": [
-    "!python train_finetune.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "MLbRaKTDcOiY",
-    "outputId": "e78e48d5-65fc-4ebf-abc0-3853777e093b"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100000/100000 [01:57<00:00, 854.05it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean: [0.01122842 0.01998984 0.08350217], Std: [0.17538942 0.21435375 0.55736226]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import h5py\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "def calculate_stats(h5_path):\n",
-    "    with h5py.File(h5_path, 'r') as f:\n",
-    "        data = f['images'] # [N, 125, 125, 3]\n",
-    "\n",
-    "        # We calculate per channel (Tracks, ECAL, HCAL)\n",
-    "        sums = np.zeros(3)\n",
-    "        sq_sums = np.zeros(3)\n",
-    "        num_pixels = len(data) * 125 * 125\n",
-    "\n",
-    "        for i in tqdm(range(len(data))):\n",
-    "            img = data[i].astype(np.float32)\n",
-    "            # Apply log1p first since that's what the model will see\n",
-    "            img = np.log1p(img)\n",
-    "\n",
-    "            sums += np.sum(img, axis=(0, 1))\n",
-    "            sq_sums += np.sum(img**2, axis=(0, 1))\n",
-    "\n",
-    "        mean = sums / num_pixels\n",
-    "        std = np.sqrt((sq_sums / num_pixels) - mean**2)\n",
-    "\n",
-    "        return mean, std\n",
-    "\n",
-    "mean, std = calculate_stats(\"/content/qg_fast.h5\")\n",
-    "print(f\"Mean: {mean}, Std: {std}\")"
+    "#!python train_finetune.py"
    ]
   }
  ],
@@ -380,9 +265,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ML-Venv",
    "language": "python",
-   "name": "python3"
+   "name": "qg_env"
   },
   "language_info": {
    "codemirror_mode": {
