--- a/QuarkGluon.ipynb
+++ b/QuarkGluon.ipynb
@@ -54,7 +54,8 @@
     "jupyter": {
      "outputs_hidden": true
     },
-    "outputId": "c51cc882-d02f-4437-ed89-29351380ffb7"
+    "outputId": "c51cc882-d02f-4437-ed89-29351380ffb7",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -81,89 +82,19 @@
     "# We need to decompress the data and store the in chunks optimal for the dataloader to read\n",
     "\n",
     "from utils import unpack_h5\n",
-    "unpack_h5(\"../data_compressed/qg_medium_train.h5\", \"../data_uncompressed/qg_medium_train.h5\")\n",
-    "unpack_h5(\"../data_compressed/qg_medium_test.h5\", \"/content/qq_medium_test.h5\")\n",
-    "unpack_h5(\"../data_compressed/qg_medium_finetune.h5\", \"/content/qg_medium_finetune.h5\")"
+    "unpack_h5(\"/shared/usiddiqui/IJEPA/data_compressed/qg_medium_train.h5\", \"/shared/usiddiqui/IJEPA/data_uncompressed/qg_medium_train.h5\")\n",
+    "unpack_h5(\"/shared/usiddiqui/IJEPA/data_compressed/qg_medium_test.h5\", \"/shared/usiddiqui/IJEPA/data_uncompressed/qq_medium_test.h5\")\n",
+    "unpack_h5(\"/shared/usiddiqui/IJEPA/data_compressed/qg_medium_finetune.h5\", \"/shared/usiddiqui/IJEPA/data_uncompressed/qg_medium_finetune.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "Tcg98EdOjm-1",
-    "outputId": "fa34dd4c-a647-44be-dc78-d5ad62f7a9c6"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting colab_config.yaml\n"
-     ]
-    }
-   ],
-   "source": [
-    "# config_colab.yaml\n",
-    "%%writefile config.yaml\n",
-    "data:\n",
-    "  h5_path: \"/content/qg_fast.h5\"\n",
-    "  batch_size: 256\n",
-    "  num_workers: 4\n",
-    "\n",
-    "model:\n",
-    "  name: \"vit_small_ijepa\"\n",
-    "  patch_dim: 192\n",
-    "  embed_dim: 384\n",
-    "  depth: 12\n",
-    "  num_heads: 6\n",
-    "  predictor_embed_dim: 192\n",
-    "  predictor_depth: 6\n",
-    "\n",
-    "train:\n",
-    "  base_lr: 0.00005\n",
-    "  epochs: 25\n",
-    "  warmup_epochs: 8\n",
-    "  ema_momentum: 0.999\n",
-    "  weight_decay: 0.001\n",
-    "  save_freq: 5\n",
-    "  # Paths in Drive for persistent storage\n",
-    "  checkpoint_dir: \"/content/drive/MyDrive/QG_IJEPA/checkpoints\"\n",
-    "  log_dir: \"/content/drive/MyDrive/QG_IJEPA/logs\"\n",
-    "\n",
-    "  # Optional: Resume from a specific checkpoint\n",
-    "  # resume_from: \"/content/drive/MyDrive/QG_IJEPA/checkpoints/20260122_0154/checkpoint_epoch_8.pth\"\n",
-    "\n",
-    "masking:\n",
-    "  grid_size: 16\n",
-    "  num_targets: 2\n",
-    "  target_scale: [0.1, 0.15]\n",
-    "  context_scale: [0.5, 0.6]\n",
-    "\n",
-    "finetune:\n",
-    "  checkpoint_to_load: \"/content/drive/MyDrive/QG_IJEPA/checkpoints/vit_small_ijepa_20260203_040412/best_encoder.pth\"\n",
-    "  train_h5_path: \"/content/qg_fast_finetune.h5\"       # Just for the Linear Head\n",
-    "  test_h5_path: \"/content/qg_fast_test.h5\"            # The \"Vault\" for ROC AUC\n",
-    "  batch_size: 64\n",
-    "  epochs: 5\n",
-    "  lr: 0.001\n",
-    "  freeze_encoder: True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "collapsed": true,
     "id": "_bCGBLZuL6s3",
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "outputId": "230c6ae5-e23a-46c5-f42e-60ff789b526d"
    },
    "outputs": [
@@ -171,39 +102,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2026-02-03 06:03:14,081 | INFO | Config saved to /content/drive/MyDrive/QG_IJEPA/checkpoints/vit_small_ijepa_20260203_060314\n",
-      "2026-02-03 06:03:14,088 | INFO | --- Dataset Loaded (Size: 100000) ---\n",
-      "Epoch 1: 100% 391/391 [05:07<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:08:23,785 | INFO | Epoch [1/25] | Loss: 1.081902 | LR: 0.000000\n",
-      "2026-02-03 06:08:27,388 | INFO | --- New best encoder saved at epoch 1 ---\n",
-      "Epoch 2: 100% 391/391 [05:05<00:00,  1.28batch/s]\n",
-      "2026-02-03 06:13:33,356 | INFO | Epoch [2/25] | Loss: 0.527054 | LR: 0.000006\n",
-      "2026-02-03 06:13:36,840 | INFO | --- New best encoder saved at epoch 2 ---\n",
-      "Epoch 3: 100% 391/391 [05:08<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:18:44,995 | INFO | Epoch [3/25] | Loss: 0.301482 | LR: 0.000013\n",
-      "2026-02-03 06:18:49,881 | INFO | --- New best encoder saved at epoch 3 ---\n",
-      "Epoch 4: 100% 391/391 [05:05<00:00,  1.28batch/s]\n",
-      "2026-02-03 06:23:55,759 | INFO | Epoch [4/25] | Loss: 0.200616 | LR: 0.000019\n",
-      "2026-02-03 06:23:59,310 | INFO | --- New best encoder saved at epoch 4 ---\n",
-      "Epoch 5: 100% 391/391 [05:07<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:29:06,887 | INFO | Epoch [5/25] | Loss: 0.144827 | LR: 0.000025\n",
-      "2026-02-03 06:29:10,072 | INFO | --- New best encoder saved at epoch 5 ---\n",
-      "Epoch 6: 100% 391/391 [05:06<00:00,  1.28batch/s]\n",
-      "2026-02-03 06:34:16,368 | INFO | Epoch [6/25] | Loss: 0.117721 | LR: 0.000031\n",
-      "2026-02-03 06:34:20,787 | INFO | --- New best encoder saved at epoch 6 ---\n",
-      "Epoch 7: 100% 391/391 [05:07<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:39:28,688 | INFO | Epoch [7/25] | Loss: 0.101355 | LR: 0.000038\n",
-      "2026-02-03 06:39:32,185 | INFO | --- New best encoder saved at epoch 7 ---\n",
-      "Epoch 8: 100% 391/391 [05:07<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:44:40,164 | INFO | Epoch [8/25] | Loss: 0.090024 | LR: 0.000044\n",
-      "2026-02-03 06:44:43,783 | INFO | --- New best encoder saved at epoch 8 ---\n",
-      "Epoch 9: 100% 391/391 [05:07<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:49:51,500 | INFO | Epoch [9/25] | Loss: 0.081381 | LR: 0.000050\n",
-      "2026-02-03 06:49:59,051 | INFO | --- New best encoder saved at epoch 9 ---\n",
-      "Epoch 10: 100% 391/391 [05:07<00:00,  1.27batch/s]\n",
-      "2026-02-03 06:55:06,634 | INFO | Epoch [10/25] | Loss: 0.075727 | LR: 0.000050\n",
-      "2026-02-03 06:55:10,392 | INFO | --- New best encoder saved at epoch 10 ---\n",
-      "Epoch 11:  50% 196/391 [02:37<02:31,  1.29batch/s]"
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/shared/usiddiqui/IJEPA/QG_Ijepa/train_pretrain.py\"\u001b[0m, line \u001b[35m20\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    logger, checkpoint_dir, device = \u001b[31minit_experiment\u001b[0m\u001b[1;31m(cfg)\u001b[0m\n",
+      "                                     \u001b[31m~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/shared/usiddiqui/IJEPA/QG_Ijepa/utils/misc.py\"\u001b[0m, line \u001b[35m61\u001b[0m, in \u001b[35minit_experiment\u001b[0m\n",
+      "    \u001b[31mos.makedirs\u001b[0m\u001b[1;31m(checkpoint_dir, exist_ok=True)\u001b[0m\n",
+      "    \u001b[31m~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m218\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
+      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m218\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
+      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m218\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
+      "  [Previous line repeated 2 more times]\n",
+      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m228\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
+      "\u001b[1;35mPermissionError\u001b[0m: \u001b[35m[Errno 13] Permission denied: '/content'\u001b[0m\n"
      ]
     }
    ],
