--- a/QuarkGluon.ipynb
+++ b/QuarkGluon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -15,26 +15,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 5, done.\u001b[K\n",
-      "remote: Counting objects:  20% (1/5)\u001b[K\r",
-      "remote: Counting objects:  40% (2/5)\u001b[K\r",
-      "remote: Counting objects:  60% (3/5)\u001b[K\r",
-      "remote: Counting objects:  80% (4/5)\u001b[K\r",
-      "remote: Counting objects: 100% (5/5)\u001b[K\r",
-      "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1/1)\u001b[K\r",
-      "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-      "remote: Total 3 (delta 2), reused 3 (delta 2), pack-reused 0 (from 0)\u001b[K\n",
-      "Unpacking objects:  33% (1/3)\r",
-      "Unpacking objects:  66% (2/3)\r",
-      "Unpacking objects: 100% (3/3)\r",
-      "Unpacking objects: 100% (3/3), 430 bytes | 430.00 KiB/s, done.\n",
-      "From https://github.com/Usaid-Siddiqui/QG_Ijepa\n",
-      "   0da9c0e..92c8561  main       -> origin/main\n",
-      "Updating 0da9c0e..92c8561\n",
-      "Fast-forward\n",
-      " train_pretrain.py | 7 \u001b[32m++++++\u001b[m\u001b[31m-\u001b[m\n",
-      " 1 file changed, 6 insertions(+), 1 deletion(-)\n"
+      "Already up to date.\n"
      ]
     }
    ],
@@ -44,16 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "collapsed": true,
     "id": "hVCMeT1YSC2s",
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "outputId": "c51cc882-d02f-4437-ed89-29351380ffb7",
     "scrolled": true
    },
@@ -62,14 +39,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target file /content/qg_fast.h5 already exists. Skipping.\n",
-      "Unpacking 20000 samples to /content/qg_fast_test.h5...\n",
+      "Unpacking 100000 samples to /shared/usiddiqui/IJEPA/data_uncompressed/qg_medium_train.h5...\n",
+      "Progress: 0/100000\n",
+      "Progress: 5000/100000\n",
+      "Progress: 10000/100000\n",
+      "Progress: 15000/100000\n",
+      "Progress: 20000/100000\n",
+      "Progress: 25000/100000\n",
+      "Progress: 30000/100000\n",
+      "Progress: 35000/100000\n",
+      "Progress: 40000/100000\n",
+      "Progress: 45000/100000\n",
+      "Progress: 50000/100000\n",
+      "Progress: 55000/100000\n",
+      "Progress: 60000/100000\n",
+      "Progress: 65000/100000\n",
+      "Progress: 70000/100000\n",
+      "Progress: 80000/100000\n",
+      "Progress: 85000/100000\n",
+      "Progress: 90000/100000\n",
+      "Progress: 95000/100000\n",
+      "Unpacking Complete.\n",
+      "Unpacking 20000 samples to /shared/usiddiqui/IJEPA/data_uncompressed/qq_medium_test.h5...\n",
       "Progress: 0/20000\n",
       "Progress: 5000/20000\n",
       "Progress: 10000/20000\n",
       "Progress: 15000/20000\n",
       "Unpacking Complete.\n",
-      "Unpacking 20000 samples to /content/qg_fast_finetune.h5...\n",
+      "Unpacking 20000 samples to /shared/usiddiqui/IJEPA/data_uncompressed/qg_medium_finetune.h5...\n",
       "Progress: 0/20000\n",
       "Progress: 5000/20000\n",
       "Progress: 10000/20000\n",
@@ -89,32 +86,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "_bCGBLZuL6s3",
-    "outputId": "230c6ae5-e23a-46c5-f42e-60ff789b526d"
+    "outputId": "230c6ae5-e23a-46c5-f42e-60ff789b526d",
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2026-02-04 00:26:43,711 | INFO | Config saved to /shared/usiddiqui/IJEPA/checkpoints/vit_small_ijepa_20260204_002643\n",
+      "2026-02-04 00:26:43,715 | INFO | --- Dataset Loaded (Size: 100000) ---\n",
+      "Epoch 1:   4%|█▏                            | 16/391 [04:07<55:27,  8.87s/batch]^C\n",
+      "Epoch 1:   4%|█▏                          | 16/391 [04:12<1:38:28, 15.75s/batch]\n",
       "Traceback (most recent call last):\n",
-      "  File \u001b[35m\"/shared/usiddiqui/IJEPA/QG_Ijepa/train_pretrain.py\"\u001b[0m, line \u001b[35m20\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
-      "    logger, checkpoint_dir, device = \u001b[31minit_experiment\u001b[0m\u001b[1;31m(cfg)\u001b[0m\n",
-      "                                     \u001b[31m~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^\u001b[0m\n",
-      "  File \u001b[35m\"/shared/usiddiqui/IJEPA/QG_Ijepa/utils/misc.py\"\u001b[0m, line \u001b[35m61\u001b[0m, in \u001b[35minit_experiment\u001b[0m\n",
-      "    \u001b[31mos.makedirs\u001b[0m\u001b[1;31m(checkpoint_dir, exist_ok=True)\u001b[0m\n",
-      "    \u001b[31m~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m218\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
-      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m218\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
-      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m218\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
-      "  [Previous line repeated 2 more times]\n",
-      "  File \u001b[35m\"<frozen os>\"\u001b[0m, line \u001b[35m228\u001b[0m, in \u001b[35mmakedirs\u001b[0m\n",
-      "\u001b[1;35mPermissionError\u001b[0m: \u001b[35m[Errno 13] Permission denied: '/content'\u001b[0m\n"
+      "  File \u001b[35m\"/shared/usiddiqui/IJEPA/QG_Ijepa/train_pretrain.py\"\u001b[0m, line \u001b[35m85\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    for images, labels, ctx_idx, trg_idx in \u001b[1;31mpbar\u001b[0m:\n",
+      "                                            \u001b[1;31m^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/site-packages/tqdm/std.py\"\u001b[0m, line \u001b[35m1181\u001b[0m, in \u001b[35m__iter__\u001b[0m\n",
+      "    for obj in \u001b[1;31miterable\u001b[0m:\n",
+      "               \u001b[1;31m^^^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/site-packages/torch/utils/data/dataloader.py\"\u001b[0m, line \u001b[35m741\u001b[0m, in \u001b[35m__next__\u001b[0m\n",
+      "    data = self._next_data()\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/site-packages/torch/utils/data/dataloader.py\"\u001b[0m, line \u001b[35m1524\u001b[0m, in \u001b[35m_next_data\u001b[0m\n",
+      "    idx, data = \u001b[31mself._get_data\u001b[0m\u001b[1;31m()\u001b[0m\n",
+      "                \u001b[31m~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^\u001b[0m\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/site-packages/torch/utils/data/dataloader.py\"\u001b[0m, line \u001b[35m1473\u001b[0m, in \u001b[35m_get_data\u001b[0m\n",
+      "    success, data = \u001b[31mself._try_get_data\u001b[0m\u001b[1;31m()\u001b[0m\n",
+      "                    \u001b[31m~~~~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^\u001b[0m\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/site-packages/torch/utils/data/dataloader.py\"\u001b[0m, line \u001b[35m1310\u001b[0m, in \u001b[35m_try_get_data\u001b[0m\n",
+      "    data = self._data_queue.get(timeout=timeout)\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/queue.py\"\u001b[0m, line \u001b[35m210\u001b[0m, in \u001b[35mget\u001b[0m\n",
+      "    \u001b[31mself.not_empty.wait\u001b[0m\u001b[1;31m(remaining)\u001b[0m\n",
+      "    \u001b[31m~~~~~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/opt/conda/lib/python3.13/threading.py\"\u001b[0m, line \u001b[35m363\u001b[0m, in \u001b[35mwait\u001b[0m\n",
+      "    gotit = waiter.acquire(True, timeout)\n",
+      "\u001b[1;35mKeyboardInterrupt\u001b[0m\n"
      ]
     }
    ],
@@ -167,6 +179,13 @@
    "source": [
     "#!python train_finetune.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
